# flucurl

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
benchmark/client/: pubspec.yaml  test.js  test.py
benchmark/client/lib/: main.dart
benchmark/client/macos/Runner.xcodeproj/: project.pbxproj
benchmark/server/: go.mod  main.go
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/snifox/flucurl/flucurl_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flucurl.podspec
ios/Classes/: flucurl.c
lib/: flucurl.dart  flucurl_bindings_generated.dart  flucurl_dio.dart
lib/src/: binding.dart  client.dart  flucurl.dart  flucurl_bindings_generated.dart  native_types.dart  types.dart  utils.dart
linux/: CMakeLists.txt
macos/: flucurl.podspec
src/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  build.dart  flucurl.c  flucurl.cpp  flucurl.h  vcpkg.json
src/.cache/clangd/index/: flucurl.cpp.DDA9E78F1716AE5C.idx  flucurl.h.DE2FB5967C23A8FA.idx
windows/: CMakeLists.txt
